--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     background-color: rgb(63, 95, 62);
     height: 10vh;
     width: 99vw;    
+    font-family: system-ui, "Mr De Haviland", cursive;
 }
 .personam4 {
     padding: 2vw; 
@@ -36,6 +37,8 @@ main{
     height: 100vh;
     width: 99vw;
     background-color: rgb(27, 70, 55);
+    font-family: system-ui, "Mr De Haviland", cursive;
+    font-size: 2em;
     
 }
 .craft::before {
@@ -82,6 +85,7 @@ main{
     flex-direction: column;
     flex-wrap: wrap;
     overflow: hidden;
+    font-family: "Quintessential", serif;
 }
 .mainDiv2_1{
     margin: 0;
@@ -91,6 +95,7 @@ main{
     justify-content: space-around;
     flex-wrap: wrap;
     width: 99vw;
+    font-family: "Quintessential", serif;
 }
 .div2_1{
     height: 40vh;
@@ -131,6 +136,7 @@ display: flex;
 text-wrap: wrap;
 background-color: blanchedalmond;
 width: 99vw;
+font-family: "Quintessential", serif;
 
 }
 .div2_2{
@@ -156,10 +162,10 @@ width: 99vw;
 }
 .mainDiv3{
     margin: 0;
-    height: 80vh;
+    height: auto;
     width: 99vw;
     background-color: rgb(244, 193, 244);
-    
+     font-family: "Quintessential", serif;    
 }
 .mainDiv3h{
     margin: 0;
@@ -178,7 +184,7 @@ width: 99vw;
     
 }
 .mainspan3_1{
-   height: 60vh;
+   height: auto;
    width: 60vw;
    padding-left: 10vw;
 }
@@ -192,7 +198,7 @@ width: 99vw;
     
 }
 .mainspan3_2{
-    height: 60vh;
+    height: auto;
     width: 40vw;
     padding-left: 10vw;
  }
@@ -231,6 +237,7 @@ width: 99vw;
     }
     .craft,.craft::before{
         height: 40vh;
+        font-size:small;
     }
     #firstButton{
         width: auto;
@@ -254,6 +261,7 @@ width: 99vw;
         text-wrap: wrap;
         display: flex;
         flex-wrap: wrap;
+        flex-direction:column
     }
     .div2_1button {
         margin-top: 1vh;
